fix: removed extra space inside the footer.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,3 +49,7 @@ section > * {
 .terminal-prompt {
     white-space: unset !important
 }
+
+footer > ul {
+    margin-top: 0;
+}
